Fixed blurry text for it works on Chrome

--- a/source/assets/styles/_modules/_it-works.scss
+++ b/source/assets/styles/_modules/_it-works.scss
@@ -3,6 +3,7 @@
     left: 50%;
     top: 25%;
     transform: translate3d(-50%, -50%, 0);
+    -webkit-filter: blur(0);
 }
 
 
